# Text-to-Image-Generation

./: .gitignore  .pre-commit-config.yaml  0924.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/demo/: default.yaml
configs/eval/: default.yaml
configs/model/: default.yaml
configs/train/: default.yaml
demo/: streamlit_app.py
scripts/: evaluate.py  generate_example.py  train.py
src/data/: __init__.py
src/eval/: __init__.py
src/utils/: __init__.py
src/viz/: __init__.py
tests/: test_models.py
